--- a/install
+++ b/install
@@ -11,6 +11,7 @@ linkfromhome() {
   ln -sfv $repo/$1 ~/
 }
 
+ln -sfv $repo_abs/bin ~/bin/dotfiles
 linkfromhome .bmfiles
 linkfromhome .bmdirs
 linkfromhome .ackrc
