Make dotfile bins available to i3 early

--- a/install
+++ b/install
@@ -25,4 +25,5 @@ linkfromhome .bmfiles
 linkfromhome .bmdirs
 linkfromhome .ackrc
 linkfromhome .i3
+linkfromhome .profile
 linkfromhome .spacemacs.d
