--- a/install
+++ b/install
@@ -21,6 +21,7 @@ fi
 ln -sfv $repo_abs/bin ~/bin/dotfiles
 ln -sfv $repo_abs/bin/i3blocks ~/bin/
 ln -sfv $repo_abs/.config/ranger ~/.config/ranger
+ln -sfv $repo_abs/.config/dunst ~/.config/dunst
 linkfromhome .bmfiles
 linkfromhome .bmdirs
 linkfromhome .ackrc
