--- a/install
+++ b/install
@@ -18,6 +18,14 @@ else
     git clone git@github.com:niklas/git-prompt.git ~/bin/git-prompt
 fi
 
+sudo aptitude install \
+     ruby-color \
+     rxvt-unicode \
+     i3-wm \
+     i3blocks \
+     emacs \
+     feh
+
 ln -sfv $repo_abs/bin ~/bin/dotfiles
 ln -sfv $repo_abs/bin/i3blocks ~/bin/
 ln -sfv $repo_abs/.config/ranger ~/.config/
